--- a/index.html
+++ b/index.html
@@ -145,17 +145,31 @@
                 <h3>COMPANY NAME</h3>
                 <h4>APRIL 2014</h4>
             </div>
-            
         </section>
-
-
-
+        <section id="portfolio">
+            <h1>PORTFOLIO</h1>
+            <div><img src="img/portfolio/portfolio-1.jpg" alt="portfolio-1"> </div>
+            <div><img src="img/portfolio/portfolio-2.jpg" alt="portfolio-2"> </div>
+            <div><img src="img/portfolio/portfolio-3.jpg" alt="portfolio-3"> </div>
+            <div><img src="img/portfolio/portfolio-4.jpg" alt="portfolio-4"> </div>
+            <div><img src="img/portfolio/portfolio-5.jpg" alt="portfolio-5"> </div>
+            <div><img src="img/portfolio/portfolio-6.jpg" alt="portfolio-6"> </div>
+        </section>
     </main>
-
-
-
-
-
+    <footer>
+        <div id="contact">
+            <h1>CONTACT US</h1>
+            <h2>WE ARE READY TO WORK WITH YOU</h2>
+            <form method="POST" action="https://formspree.io/rilhad1@gmail.com">
+                <input type="text" placeholder="Name"><br>
+                <input type="email" placeholder="E-mail"><br>
+                <textarea placeholder="Message"></textarea><br>
+                <input type="submit" value="Send">
+            </form>
+        </div>
+        <div id="map">
+            <img src="img/map.jpg" alt="map">
+        </div>
+    </footer>
 </body>
-
 </html>
