--- a/index.html
+++ b/index.html
@@ -14,140 +14,141 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#education">Education</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#home">HOME</a></li>
+                <li><a href="#about">ABOUT</a></li>
+                <li><a href="#skills">SKILLS</a></li>
+                <li><a href="#education">EDUCATION</a></li>
+                <li><a href="#portfolio">PORTFOLIO</a></li>
+                <li><a href="#contact">CONTACT</a></li>
             </ul>
         </nav>
     </header>
+<!--
     <main>
-        <section>
-            <div>
-                <img class="background" src="img/background.jpg" alt="Background">
-            </div>
-            <div>
+        <section id="home">
+            <img id="img-background-1" src="img/background.png" alt="background">
+            <div id="img-background">
                 <h1>RESUME</h1>
                 <h2>BOICHIK VOLODYMYR</h2>
-                <div id="social-icons">
-                    <img src="img/icon/facebook.png" alt="facebook">
-                    <img src="img/icon/skype.png" alt="skype">
-                    <img src="img/icon/twitter.png" alt="twitter">
-                    <img src="img/icon/mail.png" alt="mail">
-                    <img src="img/icon/linkedin.png" alt="linkedin">
-                    <img src="img/icon/youtube.png" alt="youtube">
-                    <img src="img/icon/google.png" alt="google">
-                </div>
+            </div>
+            <div id="background-social">
+                <a href="#"><img class="social-icons" src="img/icon/facebook.png" alt="facebook"></a>
+                <a href="#"><img class="social-icons" src="img/icon/skype.png" alt="skype"></a>
+                <a href="#"><img class="social-icons" src="img/icon/twitter.png" alt="twitter"></a>
+                <a href="#"><img class="social-icons" src="img/icon/mail.png" alt="mail"></a>
+                <a href="#"><img class="social-icons" src="img/icon/linkedin.png" alt="linkedin"></a>
+                <a href="#"><img class="social-icons" src="img/icon/youtube.png" alt="youtube"></a>
+                <a href="#"><img class="social-icons" src="img/icon/google.png" alt="google"></a>
             </div>
         </section>
+
         <section id="about">
-            <h1>ABOUT</h1>
-            <div>
+            <h2>ABOUT</h2>
+            <div id="about-left-column">
                 <div>
-                    <h2>FULL NAME</h2>
-                    <h3>Volodymyr Boichuk</h3>
-                    <img class="logo" src="img/icon/portrait.png">
+                    <h3>FULL NAME</h3>
+                    <h4>Volodymyr Boichuk</h4>
+                    <img src="img/icon/portrait.png" alt="portrait">
                 </div>
                 <div>
-                    <h2>BIRTHDAY</h2>
-                    <h3>17 May, 1995</h3>
-                    <img class="logo" src="img/icon/gift.png">
+                    <h3>BIRTHDAY</h3>
+                    <h4>17 May, 1995</h4>
+                    <img src="img/icon/gift.png" alt="gift">
                 </div>
                 <div>
-                    <h2>BIRTH PLACE</h2>
-                    <h3>Potochany, Ternopil, Ukraine</h3>
-                    <img class="logo" src="img/icon/location.png">
+                    <h3>BIRTH PLACE</h3>
+                    <h4>Potochany, Ternopil, Ukraine</h4>
+                    <img src="img/icon/location.png" alt="location">
                 </div>
             </div>
             <div>
                 <img id="face" src="img/face.jpg" alt="face">
             </div>
             <div>
-                <div>
-                    <img class="logo" src="img/icon/location.png">
-                    <h2>ADDRESS</h2>
-                    <h3>Ternopil, Ukraine</h3>
+                <div id="about-right-column">
+                    <img class="logo" src="img/icon/location.png" alt="location-2">
+                    <h3>ADDRESS</h3>
+                    <h4>Ternopil, Ukraine</h4>
                 </div>
                 <div>
-                    <img class="logo" src="img/icon/phone.png">
-                    <h2>PHONE</h2>
-                    <h3>+380987076795</h3>
+                    <img class="logo" src="img/icon/phone.png" alt=phone>
+                    <h3>PHONE</h3>
+                    <h4>+380987076795</h4>
                 </div>
                 <div>
-                    <img class="logo" src="img/icon/contact.png">
-                    <h2>EMAIL ADDRESS</h2>
-                    <h3>rilhad1@gmail.com</h3>
+                    <img class="logo" src="img/icon/contact.png" alt="contact">
+                    <h3>EMAIL ADDRESS</h3>
+                    <h4>rilhad1@gmail.com</h4>
                 </div>
             </div>
         </section>
-        <section>
+        
+        <section id="get-in-touch">
             <h2>LET'S TALK ABOUT YOUR NEW PROJECT</h2>
-            <button>
-                <a href="#contact">GET IN TOUCH</a>
-            </button>
+            <button type="button">GET IN TOUCH</button>
         </section>
-        <section id="skills">
-            <h1>SKILLS</h1>
-            <div><img src="img/skills/html.png">
+        -->
+        <section id="#skills">
+            <h2>SKILLS</h2>
+            <div class="skills"><img src="img/skills/html.png" alt="html-ico">
                 <p>HTML5</p>
             </div>
-            <div><img src="img/skills/css.png">
+            <div class="skills"><img src="img/skills/css.png" alt="css-ico">
                 <p>CSS3</p>
             </div>
-            <div><img src="img/skills/js.png">
+            <div class="skills"><img src="img/skills/js.png" alt="javascript-ico">
                 <p>JavaScript</p>
             </div>
-            <div><img src="img/skills/wordpress.png">
+            <div class="skills"><img src="img/skills/wordpress.png" alt="wordpress-ico">
                 <p>WordPress</p>
             </div>
-            <div><img src="img/skills/ps.png">
+            <div class="skills"><img src="img/skills/ps.png" alt="photoshop-ico">
                 <p>Photoshop</p>
             </div>
         </section>
-        <section>
-            <h1>PROCESS</h1>
-            <img class="background" src="img/process.jpg" alt="prosecc">
+        <!--
+        <section id="process">
+            <h2>PROCESS</h2>
+            <img class="img-background" src="img/process.jpg" alt="prosecc">
         </section>
         <section id="education">
-            <h1>EDUCATION</h1>
-            <h2>COMPUTER SYSTEM AND NETWORKS</h2>
-            <h4>Ternopil National Economic University</h4>
-            <h3>Sep 2012 - Jun 2016</h3>
-            <h2>COMPUTER ENGINEERING</h2>
-            <h4>Ternopil National Economic University</h4>
-            <h3>Sep 2016 - Feb 2018</h3>
-            <h2>CS50</h2>
-            <h4>Prometeus</h4>
-            <h3>Apr 2017 - Jul 2017</h3>
-            <h2>HTML5/ CSS3/ JavaScript Fundamentals</h2>
-            <h4>SoftServe</h4>
-            <h3>Aug 2017 - Sept 2017</h3>
+            <h2>EDUCATION</h2>
+            <h3>COMPUTER SYSTEM AND NETWORKS</h3>
+            <h5>Ternopil National Economic University</h5>
+            <h4>Sep 2012 - Jun 2016</h4>
+            <h3>COMPUTER ENGINEERING</h3>
+            <h5>Ternopil National Economic University</h5>
+            <h4>Sep 2016 - Feb 2018</h4>
+            <h3>CS50</h3>
+            <h5>Prometeus</h5>
+            <h4>Apr 2017 - Jul 2017</h4>
+            <h3>HTML5/ CSS3/ JavaScript Fundamentals</h3>
+            <h5>SoftServe</h5>
+            <h4>Aug 2017 - Sep 2017</h4>
         </section>
         <section id="certificate">
-            <h1>CERTIFICATE</h1>
+            <h2>CERTIFICATE</h2>
             <div>
                 <img src="img/certificate/certificate-1.jpg" alt="certificate">
-                <h2>CERTIFICATE TITLE</h2>
-                <h3>COMPANY NAME</h3>
-                <h4>APRIL 2014</h4>
+                <h3>CERTIFICATE TITLE</h3>
+                <h4>COMPANY NAME</h4>
+                <h5>APRIL 2014</h5>
             </div>
             <div>
                 <img src="img/certificate/certificate-1.jpg" alt="certificate">
-                <h2>CERTIFICATE TITLE</h2>
-                <h3>COMPANY NAME</h3>
-                <h4>APRIL 2014</h4>
+                <h3>CERTIFICATE TITLE</h3>
+                <h4>COMPANY NAME</h4>
+                <h5>APRIL 2014</h5>
             </div>
             <div>
                 <img src="img/certificate/certificate-1.jpg" alt="certificate">
-                <h2>CERTIFICATE TITLE</h2>
-                <h3>COMPANY NAME</h3>
-                <h4>APRIL 2014</h4>
+                <h3>CERTIFICATE TITLE</h3>
+                <h4>COMPANY NAME</h4>
+                <h5>APRIL 2014</h5>
             </div>
         </section>
         <section id="portfolio">
-            <h1>PORTFOLIO</h1>
+            <h2>PORTFOLIO</h2>
             <div><img src="img/portfolio/portfolio-1.jpg" alt="portfolio-1"> </div>
             <div><img src="img/portfolio/portfolio-2.jpg" alt="portfolio-2"> </div>
             <div><img src="img/portfolio/portfolio-3.jpg" alt="portfolio-3"> </div>
@@ -158,8 +159,8 @@
     </main>
     <footer>
         <div id="contact">
-            <h1>CONTACT US</h1>
-            <h2>WE ARE READY TO WORK WITH YOU</h2>
+            <h2>CONTACT US</h2>
+            <h3>WE ARE READY TO WORK WITH YOU</h3>
             <form method="POST" action="https://formspree.io/rilhad1@gmail.com">
                 <input type="text" placeholder="Name"><br>
                 <input type="email" placeholder="E-mail"><br>
@@ -171,5 +172,7 @@
             <img src="img/map.jpg" alt="map">
         </div>
     </footer>
+    -->
 </body>
+
 </html>
