--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Resume Boichuk Volodymyr</title>
     <link rel="icon" href="img/icon/favicon.png" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Roboto+Slab|Titillium+Web" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
 </head>
 
@@ -23,7 +24,6 @@
             </ul>
         </nav>
     </header>
-<!--
     <main>
         <section id="home">
             <img id="img-background-1" src="img/background.png" alt="background">
@@ -82,13 +82,12 @@
                 </div>
             </div>
         </section>
-        
+
         <section id="get-in-touch">
             <h2>LET'S TALK ABOUT YOUR NEW PROJECT</h2>
-            <button type="button">GET IN TOUCH</button>
+            <a  href="#contact"><button type="button"><span>GET IN TOUCH</span></button></a>
         </section>
-        -->
-        <section id="#skills">
+        <section id="skills">
             <h2>SKILLS</h2>
             <div class="skills"><img src="img/skills/html.png" alt="html-ico">
                 <p>HTML5</p>
@@ -106,11 +105,11 @@
                 <p>Photoshop</p>
             </div>
         </section>
-        <!--
         <section id="process">
             <h2>PROCESS</h2>
-            <img class="img-background" src="img/process.jpg" alt="prosecc">
+            <img class="process" src="img/process.jpg" alt="prosecc">
         </section>
+
         <section id="education">
             <h2>EDUCATION</h2>
             <h3>COMPUTER SYSTEM AND NETWORKS</h3>
@@ -126,27 +125,30 @@
             <h5>SoftServe</h5>
             <h4>Aug 2017 - Sep 2017</h4>
         </section>
+
         <section id="certificate">
             <h2>CERTIFICATE</h2>
-            <div>
-                <img src="img/certificate/certificate-1.jpg" alt="certificate">
+            <div class="certificate">
+                <img src="img/certificate/certificate.jpg" alt="certificate">
                 <h3>CERTIFICATE TITLE</h3>
                 <h4>COMPANY NAME</h4>
                 <h5>APRIL 2014</h5>
             </div>
-            <div>
-                <img src="img/certificate/certificate-1.jpg" alt="certificate">
+            <div class="certificate">
+                <img src="img/certificate/certificate.jpg" alt="certificate">
                 <h3>CERTIFICATE TITLE</h3>
                 <h4>COMPANY NAME</h4>
                 <h5>APRIL 2014</h5>
             </div>
-            <div>
-                <img src="img/certificate/certificate-1.jpg" alt="certificate">
+            <div class="certificate">
+                <img src="img/certificate/certificate.jpg" alt="certificate">
                 <h3>CERTIFICATE TITLE</h3>
                 <h4>COMPANY NAME</h4>
                 <h5>APRIL 2014</h5>
             </div>
         </section>
+
+
         <section id="portfolio">
             <h2>PORTFOLIO</h2>
             <div><img src="img/portfolio/portfolio-1.jpg" alt="portfolio-1"> </div>
@@ -162,8 +164,8 @@
             <h2>CONTACT US</h2>
             <h3>WE ARE READY TO WORK WITH YOU</h3>
             <form method="POST" action="https://formspree.io/rilhad1@gmail.com">
-                <input type="text" placeholder="Name"><br>
-                <input type="email" placeholder="E-mail"><br>
+                <input type="text" placeholder="Name" required><br>
+                <input type="email" placeholder="E-mail" required><br>
                 <textarea placeholder="Message"></textarea><br>
                 <input type="submit" value="Send">
             </form>
@@ -172,7 +174,7 @@
             <img src="img/map.jpg" alt="map">
         </div>
     </footer>
-    -->
+
 </body>
 
 </html>
