--- a/index.html
+++ b/index.html
@@ -43,21 +43,21 @@
         </section>
 
         <section id="about">
-            <h2>ABOUT</h2>
+            <h2 class="lato-blue-h2">ABOUT</h2>
             <div id="about-left-column">
                 <div>
-                    <h3>FULL NAME</h3>
-                    <h4>Volodymyr Boichuk</h4>
+                    <h3 class="titilium-blue-h3">FULL NAME</h3>
+                    <h4 class="roboto-blue-h4">Volodymyr Boichuk</h4>
                     <img src="img/icon/portrait.png" alt="portrait">
                 </div>
                 <div>
-                    <h3>BIRTHDAY</h3>
-                    <h4>17 May, 1995</h4>
+                    <h3 class="titilium-blue-h3">BIRTHDAY</h3>
+                    <h4 class="roboto-blue-h4">17 May, 1995</h4>
                     <img src="img/icon/gift.png" alt="gift">
                 </div>
                 <div>
-                    <h3>BIRTH PLACE</h3>
-                    <h4>Potochany, Ternopil, Ukraine</h4>
+                    <h3 class="titilium-blue-h3">BIRTH PLACE</h3>
+                    <h4 class="roboto-blue-h4">Potochany, Ternopil, Ukraine</h4>
                     <img src="img/icon/location.png" alt="location">
                 </div>
             </div>
@@ -67,28 +67,28 @@
             <div>
                 <div id="about-right-column">
                     <img class="logo" src="img/icon/location.png" alt="location-2">
-                    <h3>ADDRESS</h3>
-                    <h4>Ternopil, Ukraine</h4>
+                    <h3 class="titilium-blue-h3">ADDRESS</h3>
+                    <h4 class="roboto-blue-h4">Ternopil, Ukraine</h4>
                 </div>
                 <div>
                     <img class="logo" src="img/icon/phone.png" alt=phone>
-                    <h3>PHONE</h3>
-                    <h4>+380987076795</h4>
+                    <h3 class="titilium-blue-h3">PHONE</h3>
+                    <h4 class="roboto-blue-h4">+380987076795</h4>
                 </div>
                 <div>
                     <img class="logo" src="img/icon/contact.png" alt="contact">
-                    <h3>EMAIL ADDRESS</h3>
-                    <h4>rilhad1@gmail.com</h4>
+                    <h3 class="titilium-blue-h3">EMAIL ADDRESS</h3>
+                    <h4 class="roboto-blue-h4">rilhad1@gmail.com</h4>
                 </div>
             </div>
         </section>
 
         <section id="get-in-touch">
-            <h2>LET'S TALK ABOUT YOUR NEW PROJECT</h2>
+            <h2 class="titilium-white-h2">LET'S TALK ABOUT YOUR NEW PROJECT</h2>
             <a  href="#contact"><button type="button"><span>GET IN TOUCH</span></button></a>
         </section>
         <section id="skills">
-            <h2>SKILLS</h2>
+            <h2 class="lato-blue-h2">SKILLS</h2>
             <div class="skills"><img src="img/skills/html.png" alt="html-ico">
                 <p>HTML5</p>
             </div>
@@ -106,28 +106,28 @@
             </div>
         </section>
         <section id="process">
-            <h2>PROCESS</h2>
-            <img class="process" src="img/process.jpg" alt="prosecc">
+            <h2 class="titilium-white-h2">PROCESS</h2>
+            <img src="img/process.jpg" alt="prosecc">
         </section>
 
         <section id="education">
-            <h2>EDUCATION</h2>
-            <h3>COMPUTER SYSTEM AND NETWORKS</h3>
-            <h5>Ternopil National Economic University</h5>
-            <h4>Sep 2012 - Jun 2016</h4>
-            <h3>COMPUTER ENGINEERING</h3>
-            <h5>Ternopil National Economic University</h5>
-            <h4>Sep 2016 - Feb 2018</h4>
-            <h3>CS50</h3>
-            <h5>Prometeus</h5>
-            <h4>Apr 2017 - Jul 2017</h4>
-            <h3>HTML5/ CSS3/ JavaScript Fundamentals</h3>
-            <h5>SoftServe</h5>
-            <h4>Aug 2017 - Sep 2017</h4>
+            <h2 class="lato-blue-h2">EDUCATION</h2>
+            <h3 class="titilium-blue-h3">COMPUTER SYSTEM AND NETWORKS</h3>
+            <h4 class="roboto-blue-h4">Ternopil National Economic University</h4>
+            <h3 class="titilium-blue-h3">Sep 2012 - Jun 2016</h3>
+            <h3 class="titilium-blue-h3">COMPUTER ENGINEERING</h3>
+            <h4 class="roboto-blue-h4">Ternopil National Economic University</h4>
+            <h3 class="titilium-blue-h3">Sep 2016 - Feb 2018</h3>
+            <h3 class="titilium-blue-h3">CS50</h3>
+            <h4 class="roboto-blue-h4">Prometeus</h4>
+            <h3 class="titilium-blue-h3">Apr 2017 - Jul 2017</h3>
+            <h3 class="titilium-blue-h3">HTML5/ CSS3/ JavaScript Fundamentals</h3>
+            <h4 class="roboto-blue-h4">SoftServe</h4>
+            <h3 class="titilium-blue-h3">Aug 2017 - Sep 2017</h3>
         </section>
 
         <section id="certificate">
-            <h2>CERTIFICATE</h2>
+            <h2 class="titilium-white-h2">CERTIFICATE</h2>
             <div class="certificate">
                 <img src="img/certificate/certificate.jpg" alt="certificate">
                 <h3>CERTIFICATE TITLE</h3>
@@ -150,7 +150,7 @@
 
 
         <section id="portfolio">
-            <h2>PORTFOLIO</h2>
+            <h2 class="lato-blue-h2">PORTFOLIO</h2>
             <div><img src="img/portfolio/portfolio-1.jpg" alt="portfolio-1"> </div>
             <div><img src="img/portfolio/portfolio-2.jpg" alt="portfolio-2"> </div>
             <div><img src="img/portfolio/portfolio-3.jpg" alt="portfolio-3"> </div>
@@ -161,7 +161,7 @@
     </main>
     <footer>
         <div id="contact">
-            <h2>CONTACT US</h2>
+            <h2 class="titilium-white-h2">CONTACT US</h2>
             <h3>WE ARE READY TO WORK WITH YOU</h3>
             <form method="POST" action="https://formspree.io/rilhad1@gmail.com">
                 <input type="text" placeholder="Name" required><br>
