--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <footer>
         <div id="contact">
             <h2 class="titilium-white-h2">CONTACT US</h2>
-            <h3>WE ARE READY TO WORK WITH YOU</h3>
+            <h3 class="titilium-white-h3">WE ARE READY TO WORK WITH YOU</h3>
             <form method="POST" action="https://formspree.io/rilhad1@gmail.com">
                 <input type="text" placeholder="Name" required><br>
                 <input type="email" placeholder="E-mail" required><br>
