--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Resume Boichuk Volodymyr</title>
-    <link rel="icon" href="img/icon/favicon.png" type="image/x-icon">
+    <link rel="icon" href="img/icon/portrait.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato|Roboto+Slab|Titillium+Web" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
 </head>
