--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Resume Boichuk Volodymyr</title>
     <link rel="icon" href="img/icon/portrait.png" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css?family=Lato|Roboto+Slab|Titillium+Web" rel="stylesheet">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/google-fonts.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -26,12 +26,9 @@
     </header>
     <main>
         <section id="home">
-            <img id="img-background-1" src="img/background.png" alt="background">
-            <div id="img-background">
-                <h1>RESUME</h1>
-                <h2>BOICHIK VOLODYMYR</h2>
-            </div>
-            <div id="background-social">
+            <h1>RESUME</h1>
+            <h2>BOICHIK VOLODYMYR</h2>
+            <div id="social-icons">
                 <a href="#"><img class="social-icons" src="img/icon/facebook.png" alt="facebook"></a>
                 <a href="#"><img class="social-icons" src="img/icon/skype.png" alt="skype"></a>
                 <a href="#"><img class="social-icons" src="img/icon/twitter.png" alt="twitter"></a>
@@ -44,136 +41,151 @@
 
         <section id="about">
             <h2 class="lato-blue-h2">ABOUT</h2>
-            <div id="about-left-column">
-                <div>
-                    <h3 class="titilium-blue-h3">FULL NAME</h3>
-                    <h4 class="roboto-blue-h4">Volodymyr Boichuk</h4>
-                    <img src="img/icon/portrait.png" alt="portrait">
-                </div>
-                <div>
-                    <h3 class="titilium-blue-h3">BIRTHDAY</h3>
-                    <h4 class="roboto-blue-h4">17 May, 1995</h4>
-                    <img src="img/icon/gift.png" alt="gift">
-                </div>
-                <div>
-                    <h3 class="titilium-blue-h3">BIRTH PLACE</h3>
-                    <h4 class="roboto-blue-h4">Potochany, Ternopil, Ukraine</h4>
-                    <img src="img/icon/location.png" alt="location">
-                </div>
-            </div>
             <div>
-                <img id="face" src="img/face.jpg" alt="face">
-            </div>
-            <div>
-                <div id="about-right-column">
-                    <img class="logo" src="img/icon/location.png" alt="location-2">
-                    <h3 class="titilium-blue-h3">ADDRESS</h3>
-                    <h4 class="roboto-blue-h4">Ternopil, Ukraine</h4>
+                <aside id="about-left-column">
+                    <div>
+                        <div>
+                            <p class="titilium-blue-h3">FULL NAME</p>
+                            <p class="roboto-blue-h4">Volodymyr Boichuk</p>
+                        </div>
+                        <img src="img/icon/portrait.png" alt="portrait">
+                    </div>
+                    <div>
+                        <div>
+                            <p class="titilium-blue-h3">BIRTHDAY</p>
+                            <p class="roboto-blue-h4">17 May, 1995</p>
+                        </div>
+                        <img src="img/icon/gift.png" alt="gift">
+                    </div>
+                    <div>
+                        <div>
+                            <p class="titilium-blue-h3">BIRTH PLACE</p>
+                            <p class="roboto-blue-h4">Potochany, Ternopil, Ukraine</p>
+                        </div>
+                        <img src="img/icon/location.png" alt="location">
+                    </div>
+                </aside>
+                <aside>
+                    <img id="face" src="img/face.jpg" alt="Volodymyr Boichuk">
+                </aside>
+                <aside>
+                    <div id="about-right-column">
+                        <div>
+                            <img class="logo" src="img/icon/location.png" alt="location-2">
+                            <div>
+                                <p class="titilium-blue-h3">ADDRESS</p>
+                                <p class="roboto-blue-h4">Ternopil, Ukraine</p>
+                            </div>
+                        </div>
+                        <div>
+                            <img class="logo" src="img/icon/phone.png" alt=phone>
+                            <div>
+                                <p class="titilium-blue-h3">PHONE</p>
+                                <p class="roboto-blue-h4">+380987076795</p>
+                            </div>
+                        </div>
+                        <div>
+                            <img class="logo" src="img/icon/contact.png" alt="contact">
+                            <div>
+                                <p class="titilium-blue-h3">EMAIL ADDRESS</p>
+                                <p class="roboto-blue-h4">rilhad1@gmail.com</p>
+                            </div>
+                        </div>
+                    </div>    
+                </aside>
                 </div>
-                <div>
-                    <img class="logo" src="img/icon/phone.png" alt=phone>
-                    <h3 class="titilium-blue-h3">PHONE</h3>
-                    <h4 class="roboto-blue-h4">+380987076795</h4>
-                </div>
-                <div>
-                    <img class="logo" src="img/icon/contact.png" alt="contact">
-                    <h3 class="titilium-blue-h3">EMAIL ADDRESS</h3>
-                    <h4 class="roboto-blue-h4">rilhad1@gmail.com</h4>
-                </div>
-            </div>
         </section>
 
-        <section id="get-in-touch">
-            <h2 class="titilium-white-h2">LET'S TALK ABOUT YOUR NEW PROJECT</h2>
-            <a href="#contact"><button type="button"><span>GET IN TOUCH</span></button></a>
-        </section>
-        <section id="skills">
-            <h2 class="lato-blue-h2">SKILLS</h2>
-            <div class="skills"><img src="img/skills/html.png" alt="html-ico">
-                <p>HTML5</p>
-            </div>
-            <div class="skills"><img src="img/skills/css.png" alt="css-ico">
-                <p>CSS3</p>
-            </div>
-            <div class="skills"><img src="img/skills/js.png" alt="javascript-ico">
-                <p>JavaScript</p>
-            </div>
-            <div class="skills"><img src="img/skills/wordpress.png" alt="wordpress-ico">
-                <p>WordPress</p>
-            </div>
-            <div class="skills"><img src="img/skills/ps.png" alt="photoshop-ico">
-                <p>Photoshop</p>
-            </div>
-        </section>
-        <section id="process">
-            <h2 class="titilium-white-h2">PROCESS</h2>
-            <img src="img/process.jpg" alt="prosecc">
-        </section>
+        <!--    <section id="get-in-touch">-->
+        <!--        <h2 class="titilium-white-h2">LET'S TALK ABOUT YOUR NEW PROJECT</h2>-->
+        <!--        <form action="#contact"><input type="submit" value="Send"></form>-->
+        <!--    </section>-->
+        <!--    <section id="skills">-->
+        <!--        <h2 class="lato-blue-h2">SKILLS</h2>-->
+        <!--        <div class="skills"><img src="img/skills/html.png" alt="html-ico">-->
+        <!--            <p>HTML5</p>-->
+        <!--        </div>-->
+        <!--        <div class="skills"><img src="img/skills/css.png" alt="css-ico">-->
+        <!--            <p>CSS3</p>-->
+        <!--        </div>-->
+        <!--        <div class="skills"><img src="img/skills/js.png" alt="javascript-ico">-->
+        <!--            <p>JavaScript</p>-->
+        <!--        </div>-->
+        <!--        <div class="skills"><img src="img/skills/wordpress.png" alt="wordpress-ico">-->
+        <!--            <p>WordPress</p>-->
+        <!--        </div>-->
+        <!--        <div class="skills"><img src="img/skills/ps.png" alt="photoshop-ico">-->
+        <!--            <p>Photoshop</p>-->
+        <!--        </div>-->
+        <!--    </section>-->
+        <!--    <section id="process">-->
+        <!--        <h2 class="titilium-white-h2">PROCESS</h2>-->
+        <!--        <img src="img/process.jpg" alt="prosecc">-->
+        <!--    </section>-->
 
-        <section id="education">
-            <h2 class="lato-blue-h2">EDUCATION</h2>
-            <h3 class="titilium-blue-h3">COMPUTER SYSTEM AND NETWORKS</h3>
-            <h4 class="roboto-blue-h4">Ternopil National Economic University</h4>
-            <h3 class="titilium-blue-h3">Sep 2012 - Jun 2016</h3>
-            <h3 class="titilium-blue-h3">COMPUTER ENGINEERING</h3>
-            <h4 class="roboto-blue-h4">Ternopil National Economic University</h4>
-            <h3 class="titilium-blue-h3">Sep 2016 - Feb 2018</h3>
-            <h3 class="titilium-blue-h3">CS50</h3>
-            <h4 class="roboto-blue-h4">Prometeus</h4>
-            <h3 class="titilium-blue-h3">Apr 2017 - Jul 2017</h3>
-            <h3 class="titilium-blue-h3">HTML5/ CSS3/ JavaScript Fundamentals</h3>
-            <h4 class="roboto-blue-h4">SoftServe</h4>
-            <h3 class="titilium-blue-h3">Aug 2017 - Sep 2017</h3>
-        </section>
+        <!--    <section id="education">-->
+        <!--        <h2 class="lato-blue-h2">EDUCATION</h2>-->
+        <!--        <p class="titilium-blue-h3">COMPUTER SYSTEM AND NETWORKS</p>-->
+        <!--        <p class="roboto-blue-h4">Ternopil National Economic University</p>-->
+        <!--        <p class="titilium-blue-h3">Sep 2012 - Jun 2016</p>-->
+        <!--        <p class="titilium-blue-h3">COMPUTER ENGINEERING</p>-->
+        <!--        <p class="roboto-blue-h4">Ternopil National Economic University</p>-->
+        <!--        <p class="titilium-blue-h3">Sep 2016 - Feb 2018</p>-->
+        <!--        <p class="titilium-blue-h3">CS50</p>-->
+        <!--        <p class="roboto-blue-h4">Prometeus</p>-->
+        <!--        <p class="titilium-blue-h3">Apr 2017 - Jul 2017</p>-->
+        <!--        <p class="titilium-blue-h3">HTML5/ CSS3/ JavaScript Fundamentals</p>-->
+        <!--        <p class="roboto-blue-h4">SoftServe</p>-->
+        <!--        <p class="titilium-blue-h3">Aug 2017 - Sep 2017</p>-->
+        <!--    </section>-->
 
-        <section id="certificate">
-            <h2 class="titilium-white-h2">CERTIFICATE</h2>
-            <div class="certificate">
-                <img src="img/certificate/certificate.jpg" alt="certificate">
-                <h3>CERTIFICATE TITLE</h3>
-                <h4>COMPANY NAME</h4>
-                <h5>APRIL 2014</h5>
-            </div>
-            <div class="certificate">
-                <img src="img/certificate/certificate.jpg" alt="certificate">
-                <h3>CERTIFICATE TITLE</h3>
-                <h4>COMPANY NAME</h4>
-                <h5>APRIL 2014</h5>
-            </div>
-            <div class="certificate">
-                <img src="img/certificate/certificate.jpg" alt="certificate">
-                <h3>CERTIFICATE TITLE</h3>
-                <h4>COMPANY NAME</h4>
-                <h5>APRIL 2014</h5>
-            </div>
-        </section>
+        <!--    <section id="certificate">-->
+        <!--        <h2 class="titilium-white-h2">CERTIFICATE</h2>-->
+        <!--        <div class="certificate">-->
+        <!--            <img src="img/certificate/certificate.jpg" alt="certificate">-->
+        <!--            <p>CERTIFICATE TITLE</p>-->
+        <!--            <p>COMPANY NAME</p>-->
+        <!--            <p>APRIL 2014</p>-->
+        <!--        </div>-->
+        <!--        <div class="certificate">-->
+        <!--            <img src="img/certificate/certificate.jpg" alt="certificate">-->
+        <!--            <p>CERTIFICATE TITLE</p>-->
+        <!--            <p>COMPANY NAME</p>-->
+        <!--            <p>APRIL 2014</p>-->
+        <!--        </div>-->
+        <!--        <div class="certificate">-->
+        <!--            <img src="img/certificate/certificate.jpg" alt="certificate">-->
+        <!--            <p>CERTIFICATE TITLE</p>-->
+        <!--            <p>COMPANY NAME</p>-->
+        <!--            <p>APRIL 2014</p>-->
+        <!--        </div>-->
+        <!--    </section>-->
 
-
-        <section id="portfolio">
-            <h2 class="lato-blue-h2">PORTFOLIO</h2>
-            <div><img src="img/portfolio/portfolio-1.jpg" alt="portfolio-1"> </div>
-            <div><img src="img/portfolio/portfolio-2.jpg" alt="portfolio-2"> </div>
-            <div><img src="img/portfolio/portfolio-3.jpg" alt="portfolio-3"> </div>
-            <div><img src="img/portfolio/portfolio-4.jpg" alt="portfolio-4"> </div>
-            <div><img src="img/portfolio/portfolio-5.jpg" alt="portfolio-5"> </div>
-            <div><img src="img/portfolio/portfolio-6.jpg" alt="portfolio-6"> </div>
-        </section>
-    </main>
-    <footer>
-        <div id="contact">
-            <h2 class="titilium-white-h2">CONTACT US</h2>
-            <h3 class="titilium-white-h3">WE ARE READY TO WORK WITH YOU</h3>
-            <form method="POST" action="https://formspree.io/rilhad1@gmail.com">
-                <input type="text" placeholder="Name" required><br>
-                <input type="email" placeholder="E-mail" required><br>
-                <textarea placeholder="Message"></textarea><br>
-                <input type="submit" value="Send">
-            </form>
-        </div>
-        <div id="map">
-            <img src="img/map.jpg" alt="map">
-        </div>
-    </footer>
+        <!--    <section id="portfolio">-->
+        <!--        <h2 class="lato-blue-h2">PORTFOLIO</h2>-->
+        <!--        <div><img src="img/portfolio/portfolio-1.jpg" alt="portfolio-1"> </div>-->
+        <!--        <div><img src="img/portfolio/portfolio-2.jpg" alt="portfolio-2"> </div>-->
+        <!--        <div><img src="img/portfolio/portfolio-3.jpg" alt="portfolio-3"> </div>-->
+        <!--        <div><img src="img/portfolio/portfolio-4.jpg" alt="portfolio-4"> </div>-->
+        <!--        <div><img src="img/portfolio/portfolio-5.jpg" alt="portfolio-5"> </div>-->
+        <!--        <div><img src="img/portfolio/portfolio-6.jpg" alt="portfolio-6"> </div>-->
+        <!--    </section>-->
+        <!--</main>-->
+        <!--<footer>-->
+        <!--    <div id="contact">-->
+        <!--        <h2 class="titilium-white-h2">CONTACT US</h2>-->
+        <!--        <h3 class="titilium-white-h3">WE ARE READY TO WORK WITH YOU</h3>-->
+        <!--        <form method="POST" action="https://formspree.io/rilhad1@gmail.com">-->
+        <!--            <input type="text" placeholder="Name" required><br>-->
+        <!--            <input type="email" placeholder="E-mail" required><br>-->
+        <!--            <textarea placeholder="Message"></textarea><br>-->
+        <!--            <input type="submit" value="Send">-->
+        <!--        </form>-->
+        <!--    </div>-->
+        <!--    <div id="map">-->
+        <!--        <img src="img/map.jpg" alt="map">-->
+        <!--    </div>-->
+        <!--</footer>-->
 
 </body>
 
